--- a/styles/atom.less
+++ b/styles/atom.less
@@ -9,8 +9,8 @@ atom-workspace {
 
 .scrollbars-visible-always {
     ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 5px;
+        height: 5px;
     }
 
     ::-webkit-scrollbar-corner,
@@ -20,6 +20,6 @@ atom-workspace {
 
     ::-webkit-scrollbar-thumb {
         background: @scrollbar-color;
-        border-radius: 0;
+        border-radius: 5px;
     }
 }
